--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ earthengine-api
 geopandas
 shapely
 numpy
-opencv-python-headless==4.9.0.80
+opencv-python-headless
 ezdxf
-Pillow
+pillow
 requests
 pyproj
