--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ earthengine-api
 geopandas
 shapely
 numpy
-opencv-python-headless
+opencv-python-headless==4.7.0.72
 ezdxf
 pillow
 requests
 pyproj
-rasterio
+rasterio==1.3.6
 ultralytics>=8.0.20
