--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ earthengine-api
 geopandas
 shapely
 numpy
-opencv-python-headless==4.7.0.72
+opencv-python-headless
 ezdxf
 pillow
 requests
@@ -12,3 +12,4 @@ pyproj
 rasterio==1.3.6
 ultralytics>=8.0.20
 scikit-image
+
