--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-streamlit
-geemap
-earthengine-api
-geopandas
-shapely
-numpy
-ezdxf
-Pillow
-requests
-pyproj
-rasterio
+
 ultralytics
-opencv-python-headless==4.10.0.84
+numpy
+opencv-python-headless
+Pillow
+scikit-image
+shapely
+geopandas
+fastkml
+rasterio
+pyproj
+ezdxf
+networkx
