--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 streamlit
 pandas
+xlsxwriter
+openpyxl
+requests
 geopandas
 shapely
-fiona
-ezdxf
 osmnx
-rtree
-pyproj
-tqdm
+ezdxf
+lxml
+fastkml
+polyline
+fiona
+gdown
+mercantile
+mapbox-vector-tile
